--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,6 +2,7 @@ repositories {
     mavenCentral()
     google() // Needed for androidx
     maven { url = 'https://maven.brott.dev/' }
+    maven { url = 'https://jitpack.io' }
     flatDir {
         dirs rootProject.file('libs')
     }
@@ -21,4 +22,5 @@ dependencies {
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.6'
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.4'
 }
